Completed scraping of news story and mars image

--- a/Misions_to_Mars/mission_to_mars.ipynb
+++ b/Misions_to_Mars/mission_to_mars.ipynb
@@ -2,11 +2,142 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from splinter import Browser\n",
+    "from bs4 import BeautifulSoup\n",
+    "from webdriver_manager.chrome import ChromeDriverManager"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WDM] - ====== WebDriver manager ======\n",
+      "[WDM] - Current google-chrome version is 89.0.4389\n",
+      "[WDM] - Get LATEST driver version for 89.0.4389\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WDM] - Driver [C:\\Users\\nabul\\.wdm\\drivers\\chromedriver\\win32\\89.0.4389.23\\chromedriver.exe] found in cache\n"
+     ]
+    }
+   ],
+   "source": [
+    "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
+    "browser = Browser('chrome', **executable_path, headless=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Gather latest news information from redplanetscience.com\n",
+    "url = 'https://redplanetscience.com/'\n",
+    "browser.visit(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.9 Million Names Now Aboard NASA's Perseverance Mars Rover\n",
+      "-------\n",
+      "As part of NASA's 'Send Your Name to Mars' campaign, they've been stenciled onto three microchips along with essays from NASA's 'Name the Rover' contest. Next stop: Mars.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# HTML object\n",
+    "html = browser.html\n",
+    "\n",
+    "# Parse HTML with Beautiful Soup\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "# Find all news story elements\n",
+    "results = soup.find_all('div', class_='list_text')\n",
+    "\n",
+    "# Iterate through found story elements\n",
+    "for result in results[0]:\n",
+    "    # collect latest news title\n",
+    "    ltst_news_title = soup.find('div', class_='content_title').get_text()\n",
+    "    \n",
+    "    # collect latest news paragraph\n",
+    "    ltst_news_text = soup.find('div', class_='article_teaser_body').get_text()\n",
+    "\n",
+    "# Check results\n",
+    "print(ltst_news_title)\n",
+    "print(\"-------\")\n",
+    "print(ltst_news_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Gather image from current featured mars image from spaceimages-mars.com\n",
+    "url = 'https://spaceimages-mars.com/'\n",
+    "browser.visit(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://spaceimages-mars.com/image/featured/mars3.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "# HTML object\n",
+    "html = browser.html\n",
+    "\n",
+    "# Parse HTML with Beautiful Soup\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "# Find all news story elements\n",
+    "results = soup.find_all('div', class_='header')\n",
+    "\n",
+    "for result in results[0]:\n",
+    "    img = soup.find('img', class_='headerimage')\n",
+    "    src = img['src']\n",
+    "\n",
+    "# Store and check the results\n",
+    "featured_image_url = url + src\n",
+    "print(featured_image_url)"
    ]
   },
   {
