Scrapped table from Mars Facts

--- a/Misions_to_Mars/mission_to_mars.ipynb
+++ b/Misions_to_Mars/mission_to_mars.ipynb
@@ -38,7 +38,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WDM] - Driver [C:\\Users\\nabul\\.wdm\\drivers\\chromedriver\\win32\\89.0.4389.23\\chromedriver.exe] found in cache\n"
+      "[WDM] - Get LATEST driver version for 89.0.4389\n",
+      "[WDM] - Trying to download new driver from https://chromedriver.storage.googleapis.com/89.0.4389.23/chromedriver_win32.zip\n",
+      "[WDM] - Driver has been saved in cache [C:\\Users\\nabul\\.wdm\\drivers\\chromedriver\\win32\\89.0.4389.23]\n"
      ]
     }
    ],
@@ -67,9 +69,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.9 Million Names Now Aboard NASA's Perseverance Mars Rover\n",
+      "7 Things to Know About the Mars 2020 Perseverance Rover Mission\n",
       "-------\n",
-      "As part of NASA's 'Send Your Name to Mars' campaign, they've been stenciled onto three microchips along with essays from NASA's 'Name the Rover' contest. Next stop: Mars.\n"
+      "NASA's next rover to the Red Planet is slated to launch no earlier than July 30. These highlights will get you up to speed on the ambitious mission.\n"
      ]
     }
    ],
@@ -110,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -142,10 +144,162 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Read all tables from 'https://galaxyfacts-mars.com/' into pandas\n",
+    "mars_table = pd.read_html('https://galaxyfacts-mars.com/')\n",
+    "\n",
+    "# Determine number of tables grabbed\n",
+    "len(mars_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mars - Earth Comparison</td>\n",
+       "      <td>Mars</td>\n",
+       "      <td>Earth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Diameter:</td>\n",
+       "      <td>6,779 km</td>\n",
+       "      <td>12,742 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mass:</td>\n",
+       "      <td>6.39 × 10^23 kg</td>\n",
+       "      <td>5.97 × 10^24 kg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Moons:</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Distance from Sun:</td>\n",
+       "      <td>227,943,824 km</td>\n",
+       "      <td>149,598,262 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Length of Year:</td>\n",
+       "      <td>687 Earth days</td>\n",
+       "      <td>365.24 days</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Temperature:</td>\n",
+       "      <td>-87 to -5 °C</td>\n",
+       "      <td>-88 to 58°C</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         0                1                2\n",
+       "0  Mars - Earth Comparison             Mars            Earth\n",
+       "1                Diameter:         6,779 km        12,742 km\n",
+       "2                    Mass:  6.39 × 10^23 kg  5.97 × 10^24 kg\n",
+       "3                   Moons:                2                1\n",
+       "4       Distance from Sun:   227,943,824 km   149,598,262 km\n",
+       "5          Length of Year:   687 Earth days      365.24 days\n",
+       "6             Temperature:     -87 to -5 °C      -88 to 58°C"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert target table into a dataframe to check scrape results\n",
+    "mars_info_df = mars_table[0]\n",
+    "mars_info_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scrape high-res mars images from https://marshemispheres.com/\n",
+    "url = 'https://marshemispheres.com/'\n",
+    "browser.visit(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# HTML object\n",
+    "html = browser.html\n",
+    "\n",
+    "# Parse HTML with Beautiful Soup\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "# Find all news story elements\n",
+    "images = soup.find_all('div', class_='items')\n",
+    "\n",
+    "for result in results[0]:\n",
+    "    img = soup.find('img', class_='headerimage')\n",
+    "    src = img['src']\n",
+    "\n",
+    "# Store and check the results\n",
+    "featured_image_url = url + src\n",
+    "print(featured_image_url)"
+   ]
   }
  ],
  "metadata": {
