Implemented method to gather information from hemisphere image urls

--- a/Misions_to_Mars/mission_to_mars.ipynb
+++ b/Misions_to_Mars/mission_to_mars.ipynb
@@ -38,9 +38,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WDM] - Get LATEST driver version for 89.0.4389\n",
-      "[WDM] - Trying to download new driver from https://chromedriver.storage.googleapis.com/89.0.4389.23/chromedriver_win32.zip\n",
-      "[WDM] - Driver has been saved in cache [C:\\Users\\nabul\\.wdm\\drivers\\chromedriver\\win32\\89.0.4389.23]\n"
+      "[WDM] - Driver [C:\\Users\\nabul\\.wdm\\drivers\\chromedriver\\win32\\89.0.4389.23\\chromedriver.exe] found in cache\n"
      ]
     }
    ],
@@ -69,9 +67,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7 Things to Know About the Mars 2020 Perseverance Rover Mission\n",
+      "Mars Is Getting a New Robotic Meteorologist\n",
       "-------\n",
-      "NASA's next rover to the Red Planet is slated to launch no earlier than July 30. These highlights will get you up to speed on the ambitious mission.\n"
+      "Sensors on NASA's Perseverance will help prepare for future human exploration by taking weather measurements and studying dust particles.\n"
      ]
     }
    ],
@@ -119,7 +117,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://spaceimages-mars.com/image/featured/mars3.jpg\n"
+      "https://spaceimages-mars.com/image/featured/mars1.jpg\n"
      ]
     }
    ],
@@ -144,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +151,7 @@
        "2"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +253,7 @@
        "6             Temperature:     -87 to -5 °C      -88 to 58°C"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,9 +277,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://marshemispheres.com/cerberus.html',\n",
+       " 'https://marshemispheres.com/schiaparelli.html',\n",
+       " 'https://marshemispheres.com/syrtis.html',\n",
+       " 'https://marshemispheres.com/valles.html']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# HTML object\n",
     "html = browser.html\n",
@@ -289,16 +301,71 @@
     "# Parse HTML with Beautiful Soup\n",
     "soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
-    "# Find all news story elements\n",
-    "images = soup.find_all('div', class_='items')\n",
+    "# Find all links to images\n",
+    "image_links = soup.find_all('div', class_='item')\n",
     "\n",
-    "for result in results[0]:\n",
-    "    img = soup.find('img', class_='headerimage')\n",
-    "    src = img['src']\n",
+    "link_list = []\n",
     "\n",
-    "# Store and check the results\n",
-    "featured_image_url = url + src\n",
-    "print(featured_image_url)"
+    "for image_link in image_links:\n",
+    "    link = image_link.find('a', class_='itemLink product-item')\n",
+    "    link_list.append(url + link['href'])\n",
+    "\n",
+    "link_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cerberus Hemisphere Enhanced: https://marshemispheres.com/cerberus.htmlimages/cerberus_enhanced.tif\n",
+      "Schiaparelli Hemisphere Enhanced: https://marshemispheres.com/schiaparelli.htmlimages/schiaparelli_enhanced.tif\n",
+      "Syrtis Major Hemisphere Enhanced: https://marshemispheres.com/syrtis.htmlimages/syrtis_major_enhanced.tif\n",
+      "Valles Marineris Hemisphere Enhanced: https://marshemispheres.com/valles.htmlimages/valles_marineris_enhanced.tif\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list to store image information\n",
+    "hemisphere_image_urls = []\n",
+    "\n",
+    "for link in link_list:\n",
+    "    \n",
+    "    # go to the url with the hihg-quality image\n",
+    "    url = link\n",
+    "    browser.visit(url)\n",
+    "    html = browser.html\n",
+    "    \n",
+    "    # Parse HTML with Beautiful Soup\n",
+    "    soup = BeautifulSoup(html, 'html.parser')\n",
+    "    \n",
+    "    # Find all news story elements\n",
+    "    images_info = soup.find_all('div', class_='cover')\n",
+    "    \n",
+    "    for image_info in images_info:\n",
+    "        title = image_info.find('h2', class_='title').get_text()\n",
+    "        description = image_info.find('div', class_='description')\n",
+    "        a = description.find('a')\n",
+    "        image_url = url + a['href']\n",
+    "        print(f\"{title}: {image_url}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hemisphere_image_urls = [\n",
+    "    {\"title\": \"Valles Marineris Hemisphere\", \"img_url\": \"...\"},\n",
+    "    {\"title\": \"Cerberus Hemisphere\", \"img_url\": \"...\"},\n",
+    "    {\"title\": \"Schiaparelli Hemisphere\", \"img_url\": \"...\"},\n",
+    "    {\"title\": \"Syrtis Major Hemisphere\", \"img_url\": \"...\"},\n",
+    "]"
    ]
   }
  ],
