--- a/Misions_to_Mars/mission_to_mars.ipynb
+++ b/Misions_to_Mars/mission_to_mars.ipynb
@@ -67,9 +67,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mars Is Getting a New Robotic Meteorologist\n",
+      "The Extraordinary Sample-Gathering System of NASA's Perseverance Mars Rover\n",
       "-------\n",
-      "Sensors on NASA's Perseverance will help prepare for future human exploration by taking weather measurements and studying dust particles.\n"
+      "Two astronauts collected Moon rocks on Apollo 11. It will take three robotic systems working together to gather up the first Mars rock samples for return to Earth.\n"
      ]
     }
    ],
@@ -117,7 +117,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://spaceimages-mars.com/image/featured/mars1.jpg\n"
+      "https://spaceimages-mars.com/image/featured/mars2.jpg\n"
      ]
     }
    ],
@@ -319,14 +319,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cerberus Hemisphere Enhanced: https://marshemispheres.com/cerberus.htmlimages/cerberus_enhanced.tif\n",
-      "Schiaparelli Hemisphere Enhanced: https://marshemispheres.com/schiaparelli.htmlimages/schiaparelli_enhanced.tif\n",
-      "Syrtis Major Hemisphere Enhanced: https://marshemispheres.com/syrtis.htmlimages/syrtis_major_enhanced.tif\n",
-      "Valles Marineris Hemisphere Enhanced: https://marshemispheres.com/valles.htmlimages/valles_marineris_enhanced.tif\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'title': 'Cerberus Hemisphere',\n",
+       "  'img_url': 'https://marshemispheres.com/images/cerberus_enhanced.tif'},\n",
+       " {'title': 'Schiaparelli Hemisphere',\n",
+       "  'img_url': 'https://marshemispheres.com/images/schiaparelli_enhanced.tif'},\n",
+       " {'title': 'Syrtis Major Hemisphere',\n",
+       "  'img_url': 'https://marshemispheres.com/images/syrtis_major_enhanced.tif'},\n",
+       " {'title': 'Valles Marineris Hemisphere',\n",
+       "  'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced.tif'}]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -335,9 +342,8 @@
     "\n",
     "for link in link_list:\n",
     "    \n",
-    "    # go to the url with the hihg-quality image\n",
-    "    url = link\n",
-    "    browser.visit(url)\n",
+    "    # go to the url with the high-quality image\n",
+    "    browser.visit(link)\n",
     "    html = browser.html\n",
     "    \n",
     "    # Parse HTML with Beautiful Soup\n",
@@ -347,26 +353,25 @@
     "    images_info = soup.find_all('div', class_='cover')\n",
     "    \n",
     "    for image_info in images_info:\n",
+    "        img_dict = {}\n",
     "        title = image_info.find('h2', class_='title').get_text()\n",
+    "        title_strip = title.rstrip('Enhanced')\n",
     "        description = image_info.find('div', class_='description')\n",
     "        a = description.find('a')\n",
     "        image_url = url + a['href']\n",
-    "        print(f\"{title}: {image_url}\")"
+    "        img_dict[\"title\"] = title_strip[0:len(title_strip) - 1]\n",
+    "        img_dict[\"img_url\"] = image_url\n",
+    "        hemisphere_image_urls.append(img_dict)\n",
+    "\n",
+    "hemisphere_image_urls"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "hemisphere_image_urls = [\n",
-    "    {\"title\": \"Valles Marineris Hemisphere\", \"img_url\": \"...\"},\n",
-    "    {\"title\": \"Cerberus Hemisphere\", \"img_url\": \"...\"},\n",
-    "    {\"title\": \"Schiaparelli Hemisphere\", \"img_url\": \"...\"},\n",
-    "    {\"title\": \"Syrtis Major Hemisphere\", \"img_url\": \"...\"},\n",
-    "]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
