Completed initial bootstraps code, pending html table fix

--- a/Misions_to_Mars/mission_to_mars.ipynb
+++ b/Misions_to_Mars/mission_to_mars.ipynb
@@ -38,7 +38,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WDM] - Driver [C:\\Users\\nabul\\.wdm\\drivers\\chromedriver\\win32\\89.0.4389.23\\chromedriver.exe] found in cache\n"
+      "[WDM] - Get LATEST driver version for 89.0.4389\n",
+      "[WDM] - Trying to download new driver from https://chromedriver.storage.googleapis.com/89.0.4389.23/chromedriver_win32.zip\n",
+      "[WDM] - Driver has been saved in cache [C:\\Users\\nabul\\.wdm\\drivers\\chromedriver\\win32\\89.0.4389.23]\n"
      ]
     }
    ],
@@ -67,9 +69,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Extraordinary Sample-Gathering System of NASA's Perseverance Mars Rover\n",
+      "NASA's Mars Reconnaissance Orbiter Undergoes Memory Update\n",
       "-------\n",
-      "Two astronauts collected Moon rocks on Apollo 11. It will take three robotic systems working together to gather up the first Mars rock samples for return to Earth.\n"
+      "Other orbiters will continue relaying data from Mars surface missions for a two-week period.\n"
      ]
     }
    ],
@@ -190,18 +192,12 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
+       "      <th>Mars - Earth Comparison</th>\n",
+       "      <th>Mars</th>\n",
+       "      <th>Earth</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Mars - Earth Comparison</td>\n",
-       "      <td>Mars</td>\n",
-       "      <td>Earth</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Diameter:</td>\n",
@@ -243,14 +239,13 @@
        "</div>"
       ],
       "text/plain": [
-       "                         0                1                2\n",
-       "0  Mars - Earth Comparison             Mars            Earth\n",
-       "1                Diameter:         6,779 km        12,742 km\n",
-       "2                    Mass:  6.39 × 10^23 kg  5.97 × 10^24 kg\n",
-       "3                   Moons:                2                1\n",
-       "4       Distance from Sun:   227,943,824 km   149,598,262 km\n",
-       "5          Length of Year:   687 Earth days      365.24 days\n",
-       "6             Temperature:     -87 to -5 °C      -88 to 58°C"
+       "0 Mars - Earth Comparison             Mars            Earth\n",
+       "1               Diameter:         6,779 km        12,742 km\n",
+       "2                   Mass:  6.39 × 10^23 kg  5.97 × 10^24 kg\n",
+       "3                  Moons:                2                1\n",
+       "4      Distance from Sun:   227,943,824 km   149,598,262 km\n",
+       "5         Length of Year:   687 Earth days      365.24 days\n",
+       "6            Temperature:     -87 to -5 °C      -88 to 58°C"
       ]
      },
      "execution_count": 8,
@@ -261,7 +256,43 @@
    "source": [
     "# Convert target table into a dataframe to check scrape results\n",
     "mars_info_df = mars_table[0]\n",
+    "\n",
+    "# grab the first row for the header\n",
+    "new_header = mars_info_df.iloc[0]\n",
+    "\n",
+    "# take the data less the header row\n",
+    "mars_info_df = mars_info_df[1:]\n",
+    "\n",
+    "# set the header row as the df header\n",
+    "mars_info_df.columns = new_header\n",
     "mars_info_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method DataFrame.to_html of 0 Mars - Earth Comparison             Mars            Earth\n",
+       "1               Diameter:         6,779 km        12,742 km\n",
+       "2                   Mass:  6.39 × 10^23 kg  5.97 × 10^24 kg\n",
+       "3                  Moons:                2                1\n",
+       "4      Distance from Sun:   227,943,824 km   149,598,262 km\n",
+       "5         Length of Year:   687 Earth days      365.24 days\n",
+       "6            Temperature:     -87 to -5 °C      -88 to 58°C>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mars_info_html = mars_info_df.to_html\n",
+    "mars_info_html"
    ]
   },
   {
