--- a/Misions_to_Mars/mission_to_mars.ipynb
+++ b/Misions_to_Mars/mission_to_mars.ipynb
@@ -38,9 +38,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WDM] - Get LATEST driver version for 89.0.4389\n",
-      "[WDM] - Trying to download new driver from https://chromedriver.storage.googleapis.com/89.0.4389.23/chromedriver_win32.zip\n",
-      "[WDM] - Driver has been saved in cache [C:\\Users\\nabul\\.wdm\\drivers\\chromedriver\\win32\\89.0.4389.23]\n"
+      "[WDM] - Driver [C:\\Users\\Nick\\.wdm\\drivers\\chromedriver\\win32\\89.0.4389.23\\chromedriver.exe] found in cache\n"
      ]
     }
    ],
@@ -69,9 +67,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NASA's Mars Reconnaissance Orbiter Undergoes Memory Update\n",
+      "Media Get a Close-Up of NASA's Mars 2020 Rover\n",
       "-------\n",
-      "Other orbiters will continue relaying data from Mars surface missions for a two-week period.\n"
+      "The clean room at NASA's Jet Propulsion Laboratory was open to the media to see NASA's next Mars explorer before it leaves for Florida in preparation for a summertime launch.\n"
      ]
     }
    ],
@@ -192,45 +190,43 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Mars - Earth Comparison</th>\n",
        "      <th>Mars</th>\n",
        "      <th>Earth</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mars - Earth Comparison</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Diameter:</td>\n",
+       "      <th>Diameter:</th>\n",
        "      <td>6,779 km</td>\n",
        "      <td>12,742 km</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Mass:</td>\n",
+       "      <th>Mass:</th>\n",
        "      <td>6.39 × 10^23 kg</td>\n",
        "      <td>5.97 × 10^24 kg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Moons:</td>\n",
+       "      <th>Moons:</th>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Distance from Sun:</td>\n",
+       "      <th>Distance from Sun:</th>\n",
        "      <td>227,943,824 km</td>\n",
        "      <td>149,598,262 km</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Length of Year:</td>\n",
+       "      <th>Length of Year:</th>\n",
        "      <td>687 Earth days</td>\n",
        "      <td>365.24 days</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Temperature:</td>\n",
+       "      <th>Temperature:</th>\n",
        "      <td>-87 to -5 °C</td>\n",
        "      <td>-88 to 58°C</td>\n",
        "    </tr>\n",
@@ -239,13 +235,14 @@
        "</div>"
       ],
       "text/plain": [
-       "0 Mars - Earth Comparison             Mars            Earth\n",
-       "1               Diameter:         6,779 km        12,742 km\n",
-       "2                   Mass:  6.39 × 10^23 kg  5.97 × 10^24 kg\n",
-       "3                  Moons:                2                1\n",
-       "4      Distance from Sun:   227,943,824 km   149,598,262 km\n",
-       "5         Length of Year:   687 Earth days      365.24 days\n",
-       "6            Temperature:     -87 to -5 °C      -88 to 58°C"
+       "0                                   Mars            Earth\n",
+       "Mars - Earth Comparison                                  \n",
+       "Diameter:                       6,779 km        12,742 km\n",
+       "Mass:                    6.39 × 10^23 kg  5.97 × 10^24 kg\n",
+       "Moons:                                 2                1\n",
+       "Distance from Sun:        227,943,824 km   149,598,262 km\n",
+       "Length of Year:           687 Earth days      365.24 days\n",
+       "Temperature:                -87 to -5 °C      -88 to 58°C"
       ]
      },
      "execution_count": 8,
@@ -265,39 +262,46 @@
     "\n",
     "# set the header row as the df header\n",
     "mars_info_df.columns = new_header\n",
+    "\n",
+    "# set index\n",
+    "mars_info_df = mars_info_df.set_index('Mars - Earth Comparison')\n",
     "mars_info_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<bound method DataFrame.to_html of 0 Mars - Earth Comparison             Mars            Earth\n",
-       "1               Diameter:         6,779 km        12,742 km\n",
-       "2                   Mass:  6.39 × 10^23 kg  5.97 × 10^24 kg\n",
-       "3                  Moons:                2                1\n",
-       "4      Distance from Sun:   227,943,824 km   149,598,262 km\n",
-       "5         Length of Year:   687 Earth days      365.24 days\n",
-       "6            Temperature:     -87 to -5 °C      -88 to 58°C>"
+       "[       Unnamed: 0_level_0               Mars              Earth\n",
+       "   Mars - Earth Comparison Unnamed: 1_level_1 Unnamed: 2_level_1\n",
+       " 0               Diameter:           6,779 km          12,742 km\n",
+       " 1                   Mass:    6.39 × 10^23 kg    5.97 × 10^24 kg\n",
+       " 2                  Moons:                  2                  1\n",
+       " 3      Distance from Sun:     227,943,824 km     149,598,262 km\n",
+       " 4         Length of Year:     687 Earth days        365.24 days\n",
+       " 5            Temperature:       -87 to -5 °C        -88 to 58°C]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mars_info_html = mars_info_df.to_html\n",
-    "mars_info_html"
+    "mars_info_html = mars_info_df.to_html()\n",
+    "\n",
+    "# test functionality\n",
+    "test = pd.read_html(mars_info_html)\n",
+    "test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +324,7 @@
        " 'https://marshemispheres.com/valles.html']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,32 +350,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'title': 'Cerberus Hemisphere',\n",
-       "  'img_url': 'https://marshemispheres.com/images/cerberus_enhanced.tif'},\n",
+       "  'img_url': 'https://marshemispheres.com/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg'},\n",
        " {'title': 'Schiaparelli Hemisphere',\n",
-       "  'img_url': 'https://marshemispheres.com/images/schiaparelli_enhanced.tif'},\n",
+       "  'img_url': 'https://marshemispheres.com/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg'},\n",
        " {'title': 'Syrtis Major Hemisphere',\n",
-       "  'img_url': 'https://marshemispheres.com/images/syrtis_major_enhanced.tif'},\n",
+       "  'img_url': 'https://marshemispheres.com/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg'},\n",
        " {'title': 'Valles Marineris Hemisphere',\n",
-       "  'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced.tif'}]"
+       "  'img_url': 'https://marshemispheres.com/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# list to store image information\n",
-    "hemisphere_image_urls = []\n",
+    "hemisphere_image_info = []\n",
     "\n",
     "for link in link_list:\n",
+    "    \n",
+    "    #create dict to store image information\n",
+    "    img_dict = {}\n",
     "    \n",
     "    # go to the url with the high-quality image\n",
     "    browser.visit(link)\n",
@@ -380,21 +387,20 @@
     "    # Parse HTML with Beautiful Soup\n",
     "    soup = BeautifulSoup(html, 'html.parser')\n",
     "    \n",
-    "    # Find all news story elements\n",
-    "    images_info = soup.find_all('div', class_='cover')\n",
+    "    # Find all image titles\n",
+    "    image_title = soup.find('h2', class_='title').get_text()\n",
+    "    title_strip = image_title.rstrip('Enhanced')\n",
     "    \n",
-    "    for image_info in images_info:\n",
-    "        img_dict = {}\n",
-    "        title = image_info.find('h2', class_='title').get_text()\n",
-    "        title_strip = title.rstrip('Enhanced')\n",
-    "        description = image_info.find('div', class_='description')\n",
-    "        a = description.find('a')\n",
-    "        image_url = url + a['href']\n",
-    "        img_dict[\"title\"] = title_strip[0:len(title_strip) - 1]\n",
-    "        img_dict[\"img_url\"] = image_url\n",
-    "        hemisphere_image_urls.append(img_dict)\n",
+    "    # Find image url\n",
+    "    image_html = soup.find('img', class_='wide-image')\n",
+    "    image_url = url + image_html['src']\n",
+    "    \n",
+    "    # Store title and url in dict and add to hemisphere list\n",
+    "    img_dict[\"title\"] = title_strip[0:len(title_strip) - 1]\n",
+    "    img_dict[\"img_url\"] = image_url\n",
+    "    hemisphere_image_info.append(img_dict)\n",
     "\n",
-    "hemisphere_image_urls"
+    "hemisphere_image_info"
    ]
   },
   {
@@ -402,7 +408,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Close the browser after scraping\n",
+    "browser.quit()"
+   ]
   }
  ],
  "metadata": {
